[package]
name = "project-starter"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.1"
dialoguer = { version="0.10.2", features=["fuzzy-select"] }
dirs = "4.0.0"
git2 = "0.15.0"
itertools = "0.10.3"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"

